feat(CSS): ajout de styles pour le conteneur d'upload avec une bordure en pointillé et un fond semi-transparent, améliorant ainsi l'interface utilisateur.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -171,3 +171,9 @@
     padding: 2px;
     box-shadow: var(--smooth-shadow);
 }
+
+#uploadBox {
+    border: 1.5px dashed #0074b8;
+    border-radius: 4px;
+     background-color: #0075b81a;
+}
